--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -17,9 +17,19 @@
     <![endif]-->
     
     <!-- Add MathJax support -->
+    <!--
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+            tex2jax: {
+                skipTags: ['script', 'noscript', 'style', 'textarea', 'pre']
+            }
+        });
+    </script>
+    -->
     <script type="text/javascript"
         src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
     </script>
+
 
 
     <script src="{{ ASSET_PATH }}/js/jquery.min.js"></script>
