Updated look and feel

--- a/_includes/themes/hooligan/post.html
+++ b/_includes/themes/hooligan/post.html
@@ -5,6 +5,11 @@
       <small>{{ page.tagline }}</small>
     {% endif %}
   </h1>
+  {% if page.description %}
+  <h3>
+	  {{ page.description }}
+  </h3>
+  {% endif %}
 </div>
 
 <div class="row">
